--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,25 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+body {
+  background-color: #000;
+}
+
+.main-container {
+  width: 100%;
+  color: #fff;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.footer-text {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+iframe {
+  width: 0 !important;
+}
